--- a/public/css/main.css
+++ b/public/css/main.css
@@ -16,7 +16,7 @@ header, footer {
 }
 
 .breadcrumb a, .breadcrumb a:active, .breadcrumb a:visited, .breadcrumb a:hover {
-    color: #7CB342 !important;
+    color: #689F38 !important;
 }
 
 /* Headings */
